--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 	<description>Demo Rest API using SpringBoot</description>
 	<packaging>jar</packaging>
 
+	<scm>
+		<connection>scm:git:https://github.com/JacobBallew/StateInfoAPI.git</connection>
+		<url>https://github.com/JacobBallew/StateInfoAPI</url>
+		<developerConnection>scm:git:https://github.com/JacobBallew/StateInfoAPI.git</developerConnection>
+	</scm>
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -67,6 +73,17 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.2</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<releaseProfiles>releases</releaseProfiles>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
