--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
+				<version>3.0.0-M4</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.scm</groupId>
