--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/JacobBallew/StateInfoAPI.git</connection>
 		<developerConnection>scm:git:https://github.com/JacobBallew/StateInfoAPI.git</developerConnection>
+		<url>https://github.com/JacobBallew/StateInfoAPI</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -78,14 +79,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>3.0.0-M4</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.scm</groupId>
-						<artifactId>maven-scm-provider-gitexe</artifactId>
-						<version>1.9.4</version>
-					</dependency>
-				</dependencies>
+				<version>2.4.2</version>
 				<configuration>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
